# tracc

./: .gitignore  Cargo.toml  LICENSE
src/: layout.rs  listview.rs  main.rs  timesheet.rs  todolist.rs  tracc.rs
src/events/: mod.rs
